fix vertical spacing on /artist grid

--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ html {
     height: 370px;
   }
   .post-type-archive-artist article {
-    height: 554px;
+    height: 454px;
   }
 }
 
@@ -358,10 +358,7 @@ html {
     height: 300px;
   }
   .post-type-archive-artist article {
-    height: 554px;
-  }
-  .post-type-archive-artist article {
-    height: 467px;
+    height: 367px;
   }
 }
 
@@ -376,7 +373,7 @@ html {
     height: 228px;
   }
   .post-type-archive-artist article {
-    height: 392px;
+    height: 292px;
   }
 }
 /*
